--- a/PROJECTS/project_1/default.html
+++ b/PROJECTS/project_1/default.html
@@ -37,7 +37,7 @@
                         <a href="#" class="nav-link text-dark">Pages</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-dark">Search</a>
+                        <a href="search.html" class="nav-link text-dark">Search</a>
                     </li>
                     <li class="nav-item">
                         <a href="default.html" class="nav-link text-dark">Default</a>
@@ -86,7 +86,7 @@
                     <a href="#" class="list-group-item list-group-item-action text-dark">
                         <article  class="row align-items-center">
                             <div class="col-md-3">
-                                <img src="https://i.pinimg.com/474x/eb/a2/38/eba238fa04432cf1d06e3d23723adfe8.jpg" alt="" class="img-fluid rounded">
+                                <img src="https://i.pinimg.com/474x/0d/a0/b8/0da0b8670efdb830ab4553e0753e204b.jpg" alt="" class="img-fluid rounded">
                             </div>
                             <div class="col-md-9">
                                 <h3 class="fs-5 mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
@@ -102,7 +102,7 @@
                     <a href="#" class="list-group-item list-group-item-action text-dark">
                         <article  class="row align-items-center">
                             <div class="col-md-3">
-                                <img src="https://i.pinimg.com/474x/eb/a2/38/eba238fa04432cf1d06e3d23723adfe8.jpg" alt="" class="img-fluid rounded">
+                                <img src="https://i.pinimg.com/474x/0d/a0/b8/0da0b8670efdb830ab4553e0753e204b.jpg" alt="" class="img-fluid rounded">
                             </div>
                             <div class="col-md-9">
                                 <h3 class="fs-5 mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
@@ -118,7 +118,7 @@
                     <a href="#" class="list-group-item list-group-item-action text-dark">
                         <article  class="row align-items-center">
                             <div class="col-md-3">
-                                <img src="https://i.pinimg.com/474x/eb/a2/38/eba238fa04432cf1d06e3d23723adfe8.jpg" alt="" class="img-fluid rounded">
+                                <img src="https://i.pinimg.com/474x/0d/a0/b8/0da0b8670efdb830ab4553e0753e204b.jpg" alt="" class="img-fluid rounded">
                             </div>
                             <div class="col-md-9">
                                 <h3 class="fs-5 mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
@@ -134,7 +134,7 @@
                     <a href="#" class="list-group-item list-group-item-action text-dark">
                         <article  class="row align-items-center">
                             <div class="col-md-3">
-                                <img src="https://i.pinimg.com/474x/eb/a2/38/eba238fa04432cf1d06e3d23723adfe8.jpg" alt="" class="img-fluid rounded">
+                                <img src="https://i.pinimg.com/474x/0d/a0/b8/0da0b8670efdb830ab4553e0753e204b.jpg" alt="" class="img-fluid rounded">
                             </div>
                             <div class="col-md-9">
                                 <h3 class="fs-5 mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
