--- a/PROJECTS/project_1/posts.html
+++ b/PROJECTS/project_1/posts.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white small border-bottom shadow-sm fixed-top custom-nav" style="--bs-bg-opacity: 0.9;">
         <div class="container">
-            <a href="index.html" class="navbar-brand">
+            <a href="/index.html" class="navbar-brand">
                 <span class="brand-style brand-gradient">
                     BLOG2.0
                 </span>
@@ -25,22 +25,22 @@
             <div class="collapse navbar-collapse" id="blog-navbar">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-dark">Home</a>
+                        <a href="/index.html" class="nav-link text-dark">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-dark">Categories</a>
+                        <a href="/PROJECTS/project_1/Categories.html" class="nav-link text-dark">Categories</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-dark">Posts</a>
+                        <a href="/PROJECTS/project_1/posts.html" class="nav-link text-dark">Posts</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-dark">Pages</a>
+                        <a href="/PROJECTS/project_1/page.html" class="nav-link text-dark">Pages</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-dark">Search</a>
+                        <a href="/PROJECTS/project_1/search.html" class="nav-link text-dark">Search</a>
                     </li>
                     <li class="nav-item">
-                        <a href="default.html" class="nav-link text-dark">Default</a>
+                        <a href="/PROJECTS/project_1/default.html" class="nav-link text-dark">Default</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
