--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Template</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/PROJECTS/project_1/style.css">
 </head>
 
 <body class="bg-light">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white small border-bottom shadow-sm fixed-top custom-nav" style="--bs-bg-opacity: 0.9;">
         <div class="container">
-            <a href="index.html" class="navbar-brand">
+            <a href="/index.html" class="navbar-brand">
                 <span class="brand-style brand-gradient">
                     BLOG2.0
                 </span>
@@ -28,19 +28,19 @@
                         <a href="index.html" class="nav-link text-dark">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="Categories.html" class="nav-link text-dark">Categories</a>
+                        <a href="/PROJECTS/project_1/Categories.html" class="nav-link text-dark">Categories</a>
                     </li>
                     <li class="nav-item">
-                        <a href="posts.html" class="nav-link text-dark">Posts</a>
+                        <a href="/PROJECTS/project_1/posts.html" class="nav-link text-dark">Posts</a>
                     </li>
                     <li class="nav-item">
-                        <a href="page.html" class="nav-link text-dark">Pages</a>
+                        <a href="/PROJECTS/project_1/page.html" class="nav-link text-dark">Pages</a>
                     </li>
                     <li class="nav-item">
-                        <a href="search.html" class="nav-link text-dark">Search</a>
+                        <a href="/PROJECTS/project_1/search.html" class="nav-link text-dark">Search</a>
                     </li>
                     <li class="nav-item">
-                        <a href="default.html" class="nav-link text-dark">Default</a>
+                        <a href="/PROJECTS/project_1/default.html" class="nav-link text-dark">Default</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -135,7 +135,7 @@
              <div class="row g-5">
                 <div class="col-md-3">
                     <div class="card shadow-sm md-3">
-                     <img class="card-img-top" src="/PROJECTS/project_1/images/poseter.jpg" alt="Post Image">
+                     <img class="card-img-top" src="./PROJECTS/project_1/images/poseter.jpg" alt="Post Image">
                      <div class="card-body">
                         <h3 class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
                          <p class="small fw-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
