--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
                 <div class="col-md-3">
                     <div class="card shadow-sm md-3">
-                     <img class="card-img-top" src="/PROJECTS/project_1/images/poseter.jpg" alt="flower8" />
+                     <img class="card-img-top" src="./PROJECTS/project_1/images/poseter.jpg" alt="flower8" />
                      <div class="card-body">
                         <h3 class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
                          <p class="small fw-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
