--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                 <div class="col-md-3">
                     <div class="card shadow-sm md-3">
-                     <img class="card-img-top" src="/PROJECTS/project_1/images/poseter.jpg" alt="flower2" />
+                     <img class="card-img-top" src="./PROJECTS/project_1/images/poseter.jpg" alt="flower2" />
                      <div class="card-body">
                         <h3 class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
                          <p class="small fw-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
@@ -161,7 +161,7 @@
 
                 <div class="col-md-3">
                     <div class="card shadow-sm md-3">
-                     <img class="card-img-top" src="/PROJECTS/project_1/images/poseter.jpg" alt="flower3" />
+                     <img class="card-img-top" src="./PROJECTS/project_1/images/poseter.jpg" alt="flower3" />
                      <div class="card-body">
                         <h3 class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
                          <p class="small fw-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
@@ -174,7 +174,7 @@
 
                 <div class="col-md-3">
                     <div class="card shadow-sm md-3">
-                     <img class="card-img-top" src="/PROJECTS/project_1/images/poseter.jpg" alt="flower4" />
+                     <img class="card-img-top" src="./PROJECTS/project_1/images/poseter.jpg" alt="flower4" />
                      <div class="card-body">
                         <h3 class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
                          <p class="small fw-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
@@ -187,7 +187,7 @@
 
                 <div class="col-md-3">
                     <div class="card shadow-sm md-3">
-                     <img class="card-img-top" src="/PROJECTS/project_1/images/poseter.jpg" alt="flower5" />
+                     <img class="card-img-top" src="./PROJECTS/project_1/images/poseter.jpg" alt="flower5" />
                      <div class="card-body">
                         <h3 class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
                          <p class="small fw-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
@@ -200,7 +200,7 @@
 
                 <div class="col-md-3">
                     <div class="card shadow-sm md-3">
-                     <img class="card-img-top" src="/PROJECTS/project_1/images/poseter.jpg" alt="flower6" />
+                     <img class="card-img-top" src="./PROJECTS/project_1/images/poseter.jpg" alt="flower6" />
                      <div class="card-body">
                         <h3 class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
                          <p class="small fw-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
@@ -213,7 +213,7 @@
 
                 <div class="col-md-3">
                     <div class="card shadow-sm md-3">
-                     <img class="card-img-top" src="/PROJECTS/project_1/images/poseter.jpg" alt="flower7" />
+                     <img class="card-img-top" src="./PROJECTS/project_1/images/poseter.jpg" alt="flower7" />
                      <div class="card-body">
                         <h3 class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h3>
                          <p class="small fw-light">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
