--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Template</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/PROJECTS/project_1/style.css">
+    <link rel="stylesheet" href="./PROJECTS/project_1/style.css">
 </head>
 
 <body class="bg-light">
